--- a/Symfony/src/Innovit/GeneralBundle/Resources/views/General/general.html.twig
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/views/General/general.html.twig
@@ -15,24 +15,21 @@
 			
 				<div id="inputs" class="" style="opacity:1">
 					<form action="" method="post" >
-					<input class="input_inscription" style=""  placeholder="nom " type="text" ></input></br> 
-					<input class="input_inscription" style=""  placeholder="prénom" type="text" ></input></br> 
-					<input class="input_inscription" style=""  placeholder="Mot de passe" type="password" ></input></br>
-					<input class="input_inscription" style=""  placeholder="vérification de mot de pass" type="password" ></input></br>
-					<input class="input_inscription" style=""  placeholder="école" type="text" ></input></br> 
-					<input class="input_inscription" style=""  placeholder="ville" type="text" ></input></br>  
-					<input class="input_inscription" style=""  placeholder="email" type="text" ></input></br>  
-					<input type="radio" name="frites" value="oui" id="case1" checked="checked" /> <label for="oui">Etudiant</label>
-					<input type="radio" name="frites" value="non" id="case2" /> <label for="non">Professeur</label><br>
-					<label id="label_choix_niveau">Niveau</label> 
+					<input class="input_inscription" style=""  placeholder="الإسم الشخصي" type="text" ></input></br> 
+					<input class="input_inscription" style=""  placeholder="الإسم العائلي" type="text" ></input></br> 
+					<input class="input_inscription" style=""  placeholder="كلمة السر" type="password" ></input></br>
+					<input class="input_inscription" style=""  placeholder="تأكيد كلمة السر" type="password" ></input></br>
+					<input class="input_inscription" style=""  placeholder="مدرستك" type="text" ></input></br> 
+					<input class="input_inscription" style=""  placeholder="مدينتك" type="text" ></input></br>  
+					<input class="input_inscription" style=""  placeholder="بريدك ألإلكتروني" type="text" ></input></br>  
+					<input type="radio" name="frites" value="oui" id="case1" checked="checked" /> <label for="oui">تلمذ</label>
+					<input type="radio" name="frites" value="non" id="case2" /> <label for="non">أستاذ</label><br>
+					<label id="label_choix_niveau">المستوى</label> 
 						<select  id="choix_niveau" name="choix">
-							<option value="choix1">Choix 1</option>
-							<option value="choix2">Choix 2</option>
-							<option value="choix3">Choix 3</option>
-							<option value="choix4">Choix 4</option>
+							<option value="choix1">السادس إبتدائي</option>
 						</select>
 					<div id="btn_insc" style="">
-						<input  style="" value="Inscription"  placeholder="Login " type="submit" ></input>
+						<input  style="" value="Inscription"  placeholder="تسجيل" type="submit" ></input>
 					</div>
 					
 					</form>
