--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/cours_matieres.html.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/cours_matieres.html.twig
@@ -35,7 +35,7 @@
 </div>
 	
 	<script>
-		var lk2="http://127.0.0.1/Symfony/web/app_dev.php/";
+		var lk2="http://127.0.0.1/remi/Symfony/web/app_dev.php/";
 	</script>
 
 	<script>
