--- a/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutgeneral.php.twig
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutgeneral.php.twig
@@ -30,48 +30,20 @@
 			
 			<div id="menu" style="">
 <div id="menu_a" style="">	
-	<a id="menu_a_4" href="{{path('innovit_general_homepage',{ name:"liensutiles"})}}""><div id="menu_4" style="" >مواقع مفيدة</div></a>
+	<a id="menu_a_4" href="{{path('innovit_general_homepage',{ name:"liensutiles"})}}"><div id="menu_4" style="" >مواقع مفيدة</div></a>
 		
-	<a id="menu_a_3" href="{{path('innovit_general_homepage',{ name:"flashactus"})}}""><div id="menu_3" style="">مستجدات</div></a>
+	<a id="menu_a_3" href="{{path('innovit_general_homepage',{ name:"flashactus"})}}"><div id="menu_3" style="">مستجدات</div></a>
 	
-	<a id="menu_a_2" href="{{path('innovit_general_homepage',{ name:"qsnous"})}}""><div id="menu_2" style="" >من نحن؟</div></a>
+	<a id="menu_a_2" href="{{path('innovit_general_homepage',{ name:"qsnous"})}}"><div id="menu_2" style="" >من نحن؟</div></a>
 	
-	<a id="menu_a_1" href="{{path('innovit_general_homepage',{ name:"Accueil"})}}""><div id="menu_1" style="" > 
+	<a id="menu_a_1" href="{{path('innovit_general_homepage',{ name:"Accueil"})}}"><div id="menu_1" style="" > 
 	<div id="img_acc" style="" ><img src="{{asset("images/accueil_rond.png")}}" id="img_acc" style="height:100%;"/></div>
 	الرئسية</div></a>
-	<div id="sing_in" style="" onclick="javascript:affichersingin()" >تسجيل الدخول</div>
+	<a id="" href="{{path('innovit_general_homepage',{ name:"login"})}}"><div id="sing_in" style="" >تسجيل الدخول</div></a>
 		
 </div>
 
 
-<div id="ligne_d_adaptation" style="" >
-	<div id="div_authentification" >
-	<div id="div_authent" style=""></div>
-	
-	    <div style="font-size:1.2em;color:#59407F;position:relative" onclick="javascript:fermersingin()">
-		تعريف
-		<div id="div_fermer"  style="" onclick="javascript:fermersingin()">
-	    <img src="{{asset("images/fermer.png")}}" style="height:100%;width:100%"/>
-	     </div>
-		</div>
-		<div class="input_authentification">
-			<input  style="" class="input"  placeholder="اسم التسجيل " type="text" >
-			</input>
-		</div>
-		<div class="input_authentification">
-			<input  style="" class="input"  placeholder="كلمة السر" type="password">
-			</input>
-		</div>
-		<div class="input_authentification" style="width:100px;margin:auto;margin-top:10px">
-			<input  style="" class="" value="دخول"  placeholder="Login " type="submit" >
-			</input>
-		</div>
-		 <div id="mot_de_passe_oubl"style="">نسيت كلمة السر</div>
-	</div>
-	<script>
-	function affichersingin(){document.getElementById("div_authentification").style.display="block"}
-	function fermersingin() {document.getElementById("div_authentification").style.display="none"}</script>
-</div>
 </div>
 
 
