--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test_prof.html.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test_prof.html.twig
@@ -20,22 +20,23 @@
 		</div>
 		<div>
 		<select  id="choix_niveau_test" name="choix_cours">
-							<option value="choix1">Choix 1</option>
-							<option value="choix2">Choix 2</option>
-							<option value="choix3">Choix 3</option>
-							<option value="choix4">Choix 4</option>
+							<option value="1">Choix 1</option>
+							<option value="2">Choix 2</option>
+							<option value="3">Choix 3</option>
+							<option value="4">Choix 4</option>
 		</select>
 		
 		<select  id="choix_matr_test" name="choix_matr">
-							<option value="choix1">الرياضيات</option>
-							<option value="choix2">علوم الحياة و الأرض</option>
-							<option value="choix3">الفزياء و الكمياء</option>
-							<option value="choix4">التاريخ</option>
-							<option value="choix4">الفرنسية</option>
+							<option value="1">الرياضيات</option>
+							<option value="2">علوم الحياة و الأرض</option>
+							<option value="3">الفزياء و الكمياء</option>
+							<option value="4">التاريخ</option>
+							<option value="5">الفرنسية</option>
 		</select>
 		</div>
 	
-			<textarea id="textarea_test"placeholder="السؤال" name="question" class="input_test_pr" style="text-align:right;max-width:98%;"></textarea></br> 
+			<textarea class="textarea_test" placeholder="السؤال" name="question" class="input_test_pr" style=""></textarea></br> 
+			<textarea class="textarea_test" placeholder="التعليل" name="justification" class="input_test_pr" style=""></textarea></br> 
 			<input class="input_test_pr" style="" name="rep1"  placeholder="الإجابة1 الصحيحة" type="text" ></input></br> 
 			<input class="input_test_pr" style="" name="rep2"  placeholder="الإجابة2" type="text" ></input></br> 
 			<input class="input_test_pr" style="" name="rep3"  placeholder="الإجابة3" type="text" ></input></br>  
