--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/quest_prof/question_prof.html.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/quest_prof/question_prof.html.twig
@@ -49,7 +49,8 @@
 		</select>
 		</div>
 		
-			<textarea id="textarea_test"placeholder="السؤال" name="modif_question" class="input_test_pr" style="text-align:right;max-width:98%;">{{quest.question}}</textarea></br> 
+			<textarea id="textarea_test"placeholder="السؤال" name="modif_question" class="textarea_test" style="">{{quest.question}}</textarea></br> 
+			<textarea id="textarea_test"placeholder="السؤال" name="modif_justi" class="textarea_test" style="">{{quest.justification}}</textarea></br> 
 			<input class="input_test_pr" style="" name="modif_rep1"  placeholder="الإجابة1 الصحيحة" type="text" value="{{quest.rep1}}"></input></br> 
 			<input class="input_test_pr" style="" name="modif_rep2" placeholder="الإجابة2" type="text" value="{{quest.rep2}}"></input></br> 
 			<input class="input_test_pr" style="" name="modif_rep3" placeholder="الإجابة3" type="text" value="{{quest.rep3}}"></input></br>  
