pas grande chose

--- a/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutprofil.php.twig
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutprofil.php.twig
@@ -27,9 +27,20 @@
 			</div>   
 			
 <div id="barreuser" style="">
-	<div  style="width:960px;padding-top:6px;padding-bottom:6px;margin:auto">
-		<div id=""  class="" style="margin:auto;width:120px;color:white;text-align:center" >--  التعريف  --</div>		
-	</div>	
+	<div id="menu_a" style="">	
+	<a id="menu_a_4" href="{{path('innovit_general_homepage',{ name:"liensutiles"})}}"><div id="menu_4" style="" >مواقع مفيدة</div></a>
+		
+	<a id="menu_a_3" href="{{path('innovit_general_homepage',{ name:"flashactus"})}}"><div id="menu_3" style="">مستجدات</div></a>
+	
+	<a id="menu_a_2" href="{{path('innovit_general_homepage',{ name:"qsnous"})}}"><div id="menu_2" style="" >من نحن؟</div></a>
+	
+	<a id="menu_a_1" href="{{path('innovit_general_homepage',{ name:"Accueil"})}}"><div id="menu_1" style="" > 
+	<div id="img_acc" style="" ><img src="{{asset("images/accueil_rond.png")}}" id="img_acc" style="height:100%;"/></div>
+	الرئسية</div></a>
+	<a id="" href="{{path('innovit_general_homepage',{ name:"login"})}}"><div id="sing_in" style="" >تسجيل الدخول</div></a>
+		
+</div>
+
 </div>
 
 
