--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/Layoutprofil.php.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/Layoutprofil.php.twig
@@ -30,7 +30,7 @@
 	<div  style="width:960px;padding-top:6px;padding-bottom:6px;position:relative;margin:auto">
 		<div id="barreuser_3"  class="barreuseri" style="" >--  حساب التلميذ  --</div>
 		<div id="barreuser_2"  class="barreuseri" style="" >رباطي</div>
-		<div id="barreuser_1" class="barreuseri" style="margin-right:75px" > كريم</div>
+		<div id="barreuser_1" class="barreuseri" style="margin-right:75px" > {{ user.username }}</div>
 		<div id="img_user" style=""><img id="" src="{{asset("images/user_icon.png")}}" style="width:100%"/></div>
 		<div id="deconnexion" style=""  >تسجيل الخروج</div>
 	</div>	
