--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test.html.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test.html.twig
@@ -12,7 +12,7 @@
 		<img class="" src="{{asset("images/png/128px/Shape 62.png")}}" style="width:100%"/>
 		</div>
 		<div id="question" class="" style="">
-		
+			
 		</div>
 		
 	
@@ -23,7 +23,7 @@
 			<div id="reponse_tet" style="">الإجابات</div>
 			
 			<div id="rep1" class="reponse" style="">
-				<div id="" class="text_rep"   style="">ما هي اطول سورة في القرآن؟</div>
+				<div id="rep1_a" class="text_rep"   style="">ما هي اطول سورة في القرآن؟</div>
 				<div id="" class="check_rep"  style=""> <input type="checkbox" name="option1" value="Milk"> </div>
 			</div>
 			
@@ -52,8 +52,9 @@
 		<div id="valider" class="" style="" onclick="javascript:vibrer()">التالي</div>
 		</div>
 	</div>
-
+	<div id="khadim">khadim khadim </div>
 </div>
 
 
+<script  src="{{asset("scripts/xhrCreate.js")}}" > </script>
 <script  src="{{asset("scripts/script_test.js")}}" > </script>
