--- a/Symfony/src/Innovit/GeneralBundle/Resources/views/General/general.html.twig
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/views/General/general.html.twig
@@ -34,10 +34,13 @@
 					</div>
 					
 					</form>
+					{{ render(controller('FOSUserBundle:Registration:register')) }}
 				</div>
 				</div>
 				
 				
 			</div>	
 		</div>
+		
+	
 {% endblock %}
