--- a/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutgeneral.php.twig
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/views/General/Layoutgeneral.php.twig
@@ -39,7 +39,7 @@
 	<a id="menu_a_1" href="{{path('innovit_general_homepage',{ name:"Accueil"})}}"><div id="menu_1" style="" > 
 	<div id="img_acc" style="" ><img src="{{asset("images/accueil_rond.png")}}" id="img_acc" style="height:100%;"/></div>
 	الرئسية</div></a>
-	<a id="" href="{{path('innovit_general_homepage',{ name:"login"})}}"><div id="sing_in" style="" >تسجيل الدخول</div></a>
+	<a id="" href="{{path('innovit_general_homepage',{ name:"login"})}}"><div id="sing_in" style="" >{{type}}</div></a>
 		
 </div>
 
