--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/Layoutprofil.php.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/Layoutprofil.php.twig
@@ -32,7 +32,7 @@
 		<div id="barreuser_2"  class="barreuseri" style="" >رباطي</div>
 		<div id="barreuser_1" class="barreuseri" style="margin-right:75px" > كريم</div>
 		<div id="img_user" style=""><img id="" src="{{asset("images/user_icon.png")}}" style="width:100%"/></div>
-		<div id="deconnexion" style=""  >تسجيل الخروج</div>
+		<div id="deconnexion"   >تسجيل الخروج</div>
 	</div>	
 </div>
 
