questions css // khadim

--- a/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test.html.twig
+++ b/Symfony/src/Innovit/ProfilBundle/Resources/views/profil/test.html.twig
@@ -7,7 +7,7 @@
 
 		<div id="test_niv" class="" style="">
 		
-			{{ render(controller('InnovitQuestionBundle:Question:pick',{id:124})) }}
+			{{ render(controller('InnovitQuestionBundle:Question:pick')) }}
 		
 		</div>
 	
