--- a/Symfony/src/Innovit/QuestionBundle/Resources/views/Question/pick.html.twig
+++ b/Symfony/src/Innovit/QuestionBundle/Resources/views/Question/pick.html.twig
@@ -1,52 +1,52 @@
 
 {% set i=1 %}
 {% for q in qs %}
-	<div id="question_tete_num" style=""><span id="num_question">0</span> السؤال رقم </div>
+	<div id="question_tete_num_{{i}}" style=""><span id="num_question_{{i}}">0</span> السؤال رقم </div>
 
-	<div id="img_quest" class="" style="">
+	<div id="img_quest_{{i}}" class="" style="">
 		<img class="" src="{{asset("images/png/128px/Shape 62.png")}}" style="width:100%"/>
 	</div>
 	
-	<div id="question" class="" style="">	
+	<div id="question_{{i}}" class="" style="">	
 		{{q.question}}
 
 	</div>
 		
-	<div id="liste_rep" class="" style="position:relative">
+	<div id="liste_rep_{{i}}" class="" style="position:relative">
 
-		<div id="reponse_tet" style="">الإجابات</div>
+		<div id="reponse_tet_{{i}}" style="">الإجابات</div>
 		
-		<div id="rep1" class="reponse" style="">
-			<div id="rep1_a" class="text_rep"   style="">{{q.rep1}}</div>
+		<div id="rep1_{{i}}" class="reponse" style="">
+			<div id="" class="text_rep"   style="">{{q.rep1}}</div>
 			<div id="" class="check_rep"  style=""> <input type="checkbox" name="option1" value="Milk"> </div>
 		</div>
 			
-		<div id="rep2" class="reponse" style="">
+		<div id="rep2_{{i}}" class="reponse" style="">
 			<div id="" class="text_rep"   style="">{{q.rep2}}</div>
 			<div id="" class="check_rep"  style=""> <input type="checkbox" name="option1" value="Milk"> </div>
 		</div>
 			
-		<div id="rep3" class="reponse" style="">
+		<div id="rep3_{{i}}" class="reponse" style="">
 			<div id="" class="text_rep"   style="">{{q.rep3}}</div>
 			<div id="" class="check_rep"  style=""> <input type="checkbox" name="option1" value="Milk"> </div>
 		</div>
 			
-		<div id="rep4" class="reponse" style="margin-bottom:20px">
+		<div id="rep4_{{i}}" class="reponse" style="margin-bottom:20px">
 			<div id="" class="text_rep"   style="">{{q.rep4}}</div>
 			<div id="" class="check_rep"  style=""> <input type="checkbox" name="option1" value="Milk"> </div>
 		</div>
 			
 	</div>
 		
-	<div id="test_bottom" class="" style="">
+	<div id="test_bottom_{{i}}" class="" style="">
 
-		<div id="progression_question"  style="">
-			<div id="progression_question_bar" style="">	</div>	
+		<div id="progression_question_{{i}}"  style="">
+			<div id="progression_question_bar_{{i}}" style="">	</div>	
 		</div>	
-		<div id="span_num_quest" >15 السؤال 0 من أصل</div>
+		<div id="span_num_quest_{{i}}" >15 السؤال 0 من أصل</div>
 	</div> 
 
-	<div id="valider" class="" style="" onclick="javascript:nextQuestion()">التالي</div>
+	<div id="valider_{{i}}" name="{{i}}" class="" style="" onclick="javascript:nextQuestion({{i}})">التالي</div>
 	
 	{% set i=i+1 %}
 {% endfor %}
